feat: Implement chat-based messaging with message persistence and participant-aware delivery.